bug fixes for dark mode

--- a/main.css
+++ b/main.css
@@ -268,6 +268,8 @@ label>img:active {}
 
 .null {display: none;}
 
+.null:first-of-type {display: block;}
+
 #snackbar {
   visibility: hidden;
   min-width: 250px;
@@ -369,8 +371,12 @@ label>img:active {}
 
 .sub-dark > div {display: inline-block;margin-bottom: 15px;}
 
-.darkmode-sect-close {position: fixed; width: 100%; height: 100vh;background-color: red; top:0px;left: 0px;border: none;}
+.darkmode-sect-close {position: fixed; width: 100%; height: 100vh;background-color: transparent; top:0px;left: 0px;border: none;z-index: 1500;}
 
 .sub-dark > div:first-of-type {margin-left: 10px;}
+
+
+
+
 
 body.darkclass .sub-dark {background-color: black;}
